tests/core/snapshots/showcase.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Invalid Config URL specified"
      }
    ],
    "data": null
  }
}
