tests/core/snapshots/showcase.md_4.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Unexpected GraphQL Request: invalid type: map, expected a string at line 1 column 9"
      }
    ],
    "data": null
  }
}
