tests/core/snapshots/test-js-multi-on-request-handlers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(onRequest: "foo")
@link(src: "test1.js", type: Script)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  bar: String @http(onRequest: "bar", url: "http://localhost:3000/bar")
  foo: String @http(url: "http://localhost:3000/foo")
}
